--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
     <div class='center'>
-        <div class='title'>Bald or not? 👴</div>
+        <div class='title'>Texas Tree Vision 🌲</div>
         <p>
-            Use images of <strong>bald</strong> heads, <strong>hairy</strong> heads, or
-            both!
+            Upload a tree image for classification. The model recognizes American Holly, American Sycamore, Bald Cypress, Bur Oak, Cedar Elm, Crape Myrtle, Pecan, Sassafras, Scrub Holly, Southern Red Oak, Texas Ash, Texas Live Oak, Texas Mountian Laurel, Wax Myrtle, and Yaupon Holly.
         </p>
         <div class='content'>
             <div class='no-display'>
